[gd_scene load_steps=26 format=2]

[ext_resource path="res://textures/Simon.png" type="Texture" id=1]
[ext_resource path="res://Simon.gd" type="Script" id=2]
[ext_resource path="res://textures/Whip.png" type="Texture" id=3]
[ext_resource path="res://sounds/10 - Whip.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/37 - Simon Damage.wav" type="AudioStream" id=5]
[ext_resource path="res://textures/Items and HUD.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6.5, 14 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 25.25, 7 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 117.69, 10.1847, 2.57025, 2.57024 )

[sub_resource type="Animation" id=26]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=28]
resource_name = "DownSteps"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Duck"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -10 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "DuckWhip1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/ShortHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -16, 9 ), Vector2( -15, 9 ), Vector2( -14, 9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=23]
resource_name = "DuckWhip2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/MediumHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -16, 9 ), Vector2( -15, 9 ), Vector2( -14, 9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=24]
resource_name = "DuckWhip3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/LongHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -16, 9 ), Vector2( -15, 9 ), Vector2( -14, 9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Jump"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 9, 0 ]
}

[sub_resource type="Animation" id=25]
resource_name = "Knockback"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=30]
resource_name = "Throwing"
length = 0.33
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="Animation" id=27]
resource_name = "UpSteps"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Whip1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/ShortHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -15, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
resource_name = "Whip2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/MediumHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -15, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=22]
resource_name = "Whip3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WhipSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WhipSprite/Hitbox/LongHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/WhipSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -15, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6.5, 14 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.5, -14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/WhipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Simon" type="KinematicBody2D"]
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 129
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -14 )
shape = SubResource( 12 )

[node name="Sprites" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 0, -16 )

[node name="WhipSprite" type="Sprite" parent="Sprites"]
visible = false
use_parent_material = true
position = Vector2( -14, 9 )
texture = ExtResource( 3 )
vframes = 7
frame = 2

[node name="Hitbox" type="Area2D" parent="Sprites/WhipSprite"]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="ShortHit" type="CollisionShape2D" parent="Sprites/WhipSprite/Hitbox"]
position = Vector2( -9, -3 )
shape = SubResource( 20 )
disabled = true

[node name="MediumHit" type="CollisionShape2D" parent="Sprites/WhipSprite/Hitbox"]
position = Vector2( -13.5, -3 )
shape = SubResource( 20 )
disabled = true

[node name="LongHit" type="CollisionShape2D" parent="Sprites/WhipSprite/Hitbox"]
position = Vector2( -14.75, -3 )
shape = SubResource( 20 )
disabled = true

[node name="Sprite" type="Sprite" parent="Sprites"]
light_mask = 4
use_parent_material = true
texture = ExtResource( 1 )
hframes = 5
vframes = 5
frame = 21

[node name="UpStepPosition" type="Node2D" parent="Sprites"]
position = Vector2( -7, 8 )

[node name="Sprite" type="Sprite" parent="Sprites/UpStepPosition"]
visible = false
texture = SubResource( 29 )

[node name="UpStepCheck" type="Node2D" parent="Sprites"]
position = Vector2( -8, 15 )

[node name="Sprite" type="Sprite" parent="Sprites/UpStepCheck"]
visible = false
texture = SubResource( 29 )

[node name="DownStepPosition" type="Node2D" parent="Sprites"]
position = Vector2( -7, 17 )

[node name="Sprite" type="Sprite" parent="Sprites/DownStepPosition"]
visible = false
texture = SubResource( 29 )

[node name="DownStepCheck" type="Node2D" parent="Sprites"]
position = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="Sprites/DownStepCheck"]
visible = false
texture = SubResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Death = SubResource( 26 )
anims/DownSteps = SubResource( 28 )
anims/Duck = SubResource( 15 )
anims/DuckWhip1 = SubResource( 19 )
anims/DuckWhip2 = SubResource( 23 )
anims/DuckWhip3 = SubResource( 24 )
anims/Idle = SubResource( 13 )
anims/Jump = SubResource( 17 )
anims/Knockback = SubResource( 25 )
anims/RESET = SubResource( 32 )
anims/Throwing = SubResource( 30 )
anims/UpSteps = SubResource( 27 )
anims/Walk = SubResource( 14 )
anims/Whip1 = SubResource( 18 )
anims/Whip2 = SubResource( 21 )
anims/Whip3 = SubResource( 22 )

[node name="WhipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="DamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FallDuckTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Sprites/WhipSprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
